--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendor": "vtex",
-  "name": "store-theme",
-  "version": "4.3.0",
+  "vendor": "itglobers",
+  "name": "product-page",
+  "version": "0.0.0",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
