--- a/store/blocks/pdp/product.jsonc
+++ b/store/blocks/pdp/product.jsonc
@@ -23,9 +23,9 @@
   },
   "flex-layout.row#product-breadcrumb": {
     "props": {
-      "blockClass":"product-breadcrumb",
+      "blockClass": "product-breadcrumb",
       "marginTop": 10,
-      "horizontalAlign":"CENTER"
+      "horizontalAlign": "CENTER"
     },
     "children": [
       "breadcrumb#products"
@@ -99,27 +99,64 @@
       "displayThumbnailsArrows": true
     }
   },
+  "flex-layout.row#rigth-0-1": {
+    "children": [
+      "flex-layout.col#right-col-0-1",
+      "flex-layout.col#right-col-0-1-1"
+    ]
+  },
+  "flex-layout.col#right-col-0-1": {
+    "props": {
+      "preventVerticalStretch": true,
+      "rowGap": 0
+    },
+    "children": [
+      "vtex.store-components:product-brand"
+    ]
+  },
+  "flex-layout.col#right-col-0-1-1": {
+    "props": {
+      "preventVerticalStretch": true,
+      "rowGap": 0
+    },
+    "children": [
+      "product-seller-name"
+    ]
+  },
+  "flex-layout.row#right-5": {
+    "props": {
+      "blockClass":"share-tarjetas",
+      "preventVerticalStretch": true,
+      "rowGap": 0
+    },
+    "children": [
+      "share#default-product",
+      "image#tarjetas-product"
+    ]
+  },
   "flex-layout.col#right-col": {
     "props": {
       "preventVerticalStretch": true,
       "rowGap": 0
     },
     "children": [
+      "flex-layout.row#rigth-0-1",
       "flex-layout.row#product-name",
-      "product-rating-summary",
-      "flex-layout.row#list-price-savings",
-      "flex-layout.row#selling-price",
-      "product-installments",
-      "product-separator",
+      // "flex-layout.col#right-col-0-3",
       "product-identifier.product",
+      // "product-rating-summary",
+      "flex-layout.row#selling-price",
+      // "flex-layout.row#list-price-savings",
+      // "product-installments",
       "sku-selector",
       "product-quantity",
       "product-assembly-options",
       "product-gifts",
       "flex-layout.row#buy-button",
+      "product-separator",
       "availability-subscriber",
-      "shipping-simulator",
-      "share#default"
+      // "shipping-simulator",
+      "flex-layout.row#right-5"
     ]
   },
   "flex-layout.row#product-name": {
@@ -138,21 +175,32 @@
   },
   "flex-layout.row#buy-button": {
     "props": {
+      "blockClass":"add-button",
       "marginTop": 4,
       "marginBottom": 7
     },
     "children": [
-      "add-to-cart-button"
+      "add-to-cart-button#product"
     ]
   },
-  "share#default": {
+  "add-to-cart-button#product": {
+    "props": {
+      "text": "AGREGAR AL CARRITO"
+    }
+  },
+  "share#default-product": {
     "props": {
       "social": {
         "Facebook": true,
-        "WhatsApp": true,
-        "Twitter": false,
-        "Pinterest": true
+        "Twitter": true,
+        "WhatsApp": true
       }
+    }
+  },
+  "image#tarjetas-product": {
+    "props": {
+      "src": "https://i.imgur.com/PbwV4H9.jpg",
+      "maxHeight": 33
     }
   }
 }
