--- a/manifest.json
+++ b/manifest.json
@@ -61,7 +61,8 @@
     "vtex.product-highlights": "2.x",
     "vtex.product-specifications": "1.x",
     "vtex.tab-layout": "0.x",
-    "vtex.category-menu": "2.x"
+    "vtex.category-menu": "2.x",
+    "vtex.flixmedia": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
